--- a/app/src/main/res/menu/home_navigation.xml
+++ b/app/src/main/res/menu/home_navigation.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_home"
-        android:title="Home" />
+        android:title="@string/nav_home" />
 
     <item
         android:id="@+id/nav_catch"
         android:icon="@drawable/ic_catch_area"
-        android:title="Catch" />
+        android:title="@string/nav_catch" />
 
     <item
         android:id="@+id/nav_camera"
@@ -19,11 +19,11 @@
     <item
         android:id="@+id/nav_catch_history"
         android:icon="@drawable/ic_history"
-        android:title="History" />
+        android:title="@string/nav_history" />
 
 
     <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile" />
+        android:title="@string/nav_profile" />
 </menu>
